--- a/smartadmin/src/main/webapp/secured/menu/sidebar.xhtml
+++ b/smartadmin/src/main/webapp/secured/menu/sidebar.xhtml
@@ -16,6 +16,54 @@
                             <span class="pcoded-mtext">Dashboard</span>
                         </a>
                     </li>
+                    <li class="">
+                        <a href="#{application.contextPath}/#{msg.sidebar_url}/staff.xhtml" class="waves-effect waves-dark">
+                            <span class="pcoded-micon">
+                                <i class="feather icon-menu"></i>
+                            </span>
+                            <span class="pcoded-mtext">Staff</span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <a href="#{application.contextPath}/#{msg.sidebar_url}/fees-type.xhtml" class="waves-effect waves-dark">
+                            <span class="pcoded-micon">
+                                <i class="feather icon-menu"></i>
+                            </span>
+                            <span class="pcoded-mtext">Fees Type</span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <a href="#{application.contextPath}/#{msg.sidebar_url}/academic-level.xhtml" class="waves-effect waves-dark">
+                            <span class="pcoded-micon">
+                                <i class="feather icon-menu"></i>
+                            </span>
+                            <span class="pcoded-mtext">Academic Level</span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <a href="#{application.contextPath}/#{msg.sidebar_url}/class-room.xhtml" class="waves-effect waves-dark">
+                            <span class="pcoded-micon">
+                                <i class="feather icon-menu"></i>
+                            </span>
+                            <span class="pcoded-mtext">Class Room</span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <a href="#{application.contextPath}/#{msg.sidebar_url}/teacher-course.xhtml" class="waves-effect waves-dark">
+                            <span class="pcoded-micon">
+                                <i class="feather icon-menu"></i>
+                            </span>
+                            <span class="pcoded-mtext">Teacher Course</span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <a href="#{application.contextPath}/#{msg.sidebar_url}/courses.xhtml" class="waves-effect waves-dark">
+                            <span class="pcoded-micon">
+                                <i class="feather icon-menu"></i>
+                            </span>
+                            <span class="pcoded-mtext">#{msg.course}s</span>
+                        </a>
+                    </li>
                     <li class="pcoded-hasmenu">
                         <a href="javascript:void(0)" class="waves-effect waves-dark">
                             <span class="pcoded-micon"><i class="feather icon-sidebar"></i></span>
@@ -23,28 +71,8 @@
                         </a>
                         <ul class="pcoded-submenu">
                             <li class="">
-                                <a href="#{application.contextPath}/#{msg.sidebar_url}/fees-type.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">Fees Type</span>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a href="#{application.contextPath}/#{msg.sidebar_url}/fees.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">Fees</span>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a href="#{application.contextPath}/#{msg.sidebar_url}/academic-level.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">Academic Level</span>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a href="#{application.contextPath}/#{msg.sidebar_url}/class-room.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">Class Room</span>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a href="#{application.contextPath}/#{msg.sidebar_url}/courses.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">#{msg.course}s</span>
+                                <a href="#" class="waves-effect waves-dark">
+                                    <span class="pcoded-mtext">Defaults</span>
                                 </a>
                             </li>
                         </ul>
