--- a/smartweb/src/main/webapp/secured/menu/sidebar.xhtml
+++ b/smartweb/src/main/webapp/secured/menu/sidebar.xhtml
@@ -16,6 +16,30 @@
                             <span class="pcoded-mtext">Dashboard</span>
                         </a>
                     </li>
+                    <li class="">
+                        <a href="#{application.contextPath}/#{msg.sidebar_url}/student-class-room.xhtml" class="waves-effect waves-dark">
+                            <span class="pcoded-micon">
+                                <i class="feather icon-menu"></i>
+                            </span>
+                            <span class="pcoded-mtext">Student Class Room</span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <a href="#{application.contextPath}/#{msg.sidebar_url}/student.xhtml" class="waves-effect waves-dark">
+                            <span class="pcoded-micon">
+                                <i class="feather icon-menu"></i>
+                            </span>
+                            <span class="pcoded-mtext">#{msg.student}</span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <a href="#{application.contextPath}/#{msg.sidebar_url}/fees.xhtml" class="waves-effect waves-dark">
+                            <span class="pcoded-micon">
+                                <i class="feather icon-menu"></i>
+                            </span>
+                            <span class="pcoded-mtext">Fees</span>
+                        </a>
+                    </li>
                     <li class="pcoded-hasmenu">
                         <a href="javascript:void(0)" class="waves-effect waves-dark">
                             <span class="pcoded-micon"><i class="feather icon-sidebar"></i></span>
@@ -23,18 +47,8 @@
                         </a>
                         <ul class="pcoded-submenu">
                             <li class="">
-                                <a href="#{application.contextPath}/#{msg.sidebar_url}/student-class-room.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">Student Class Room</span>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a href="#{application.contextPath}/#{msg.sidebar_url}/student.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">#{msg.student}</span>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a href="#{application.contextPath}/#{msg.sidebar_url}/fees.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">Fees</span>
+                                <a href="#" class="waves-effect waves-dark">
+                                    <span class="pcoded-mtext">Defaults</span>
                                 </a>
                             </li>
                         </ul>
@@ -48,18 +62,8 @@
                         </a>
                         <ul class="pcoded-submenu">
                             <li class="">
-                                <a href="#{application.contextPath}/#{msg.settings}/academic-level.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">Academic Level</span>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a href="#{application.contextPath}/#{msg.settings}/class-room.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">Class Room</span>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a href="#{application.contextPath}/#{msg.settings}/courses.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">#{msg.course}s</span>
+                                <a href="#" class="waves-effect waves-dark">
+                                    <span class="pcoded-mtext">Defaults</span>
                                 </a>
                             </li>
                         </ul>
