--- a/smartadmin/src/main/webapp/secured/pages/class-room.xhtml
+++ b/smartadmin/src/main/webapp/secured/pages/class-room.xhtml
@@ -10,6 +10,7 @@
     <h:body>
         <ui:composition template="../templatesUI.xhtml">
             <ui:define name="pageTitle">Class Room</ui:define>
+            <ui:define name="subText"></ui:define>
             <ui:define name="pageContent">
                 <div class="card">
                     <div class="card-body">
