--- a/smartadmin/src/main/webapp/secured/templatesUI.xhtml
+++ b/smartadmin/src/main/webapp/secured/templatesUI.xhtml
@@ -78,11 +78,11 @@
                                                         Default Title
                                                     </ui:insert>
                                                 </h5>
-<!--                                                <span>
+                                                <span>
                                                     <ui:insert name="subText">
                                                         Default sub text
                                                     </ui:insert>
-                                                </span>-->
+                                                </span>
                                             </div>
                                         </div>
                                         
