--- a/smartadmin/src/main/webapp/secured/pages/teacher-course.xhtml
+++ b/smartadmin/src/main/webapp/secured/pages/teacher-course.xhtml
@@ -4,61 +4,87 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <h:body>
         <ui:composition template="../templatesUI.xhtml">
-            <ui:define name="pageTitle">Link Teacher to Courses</ui:define>
+            <ui:define name="pageTitle">Teacher,Courses And Classes</ui:define>
+            <ui:define name="subText">NOTE: <small class="text-muted">Add a teacher to a class and assign subjects</small></ui:define>
             <ui:define name="pageContent">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <h:form class="spaced-form" id="teacherCourseForm">
-                                    <h:panelGrid columns="2">
+                <h:panelGroup id="mainPanel">
+                    <div class="card">
+                        <div class="card-body">
+                            <h:panelGroup rendered="#{teacherCourseRoomController.pageView.listView}">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <h:form class="spaced-form" id="teacherCourseForm">
+                                            <h:panelGrid columns="2">
+                                                <span>Staff</span>
+                                                <p:selectOneMenu value="#{teacherCourseRoomController.teacherSubject.userAccount}" filter="true" filterMatchMode="contains">
+                                                    <f:selectItem itemLabel="#{msg.choose} Teacher"/>
+                                                    <f:selectItems value="#{userCommons.userAccountList}"/>
+                                                </p:selectOneMenu>
 
-                                        <p:selectOneMenu value="#{teacherCourseRoomController.teacherSubject.userAccount}" filter="true" filterMatchMode="contains">
-                                            <f:selectItem itemLabel="#{msg.choose} Teacher"/>
-                                            <f:selectItems value="#{userCommons.userAccountList}"/>
-                                            <p:ajax listener="#{teacherCourseRoomController.selectedUserAccount()}" update="@form"/>
-                                        </p:selectOneMenu>
-                                        
-                                        <h:outputText class="field-shade" value="#{teacherCourseRoomController.selectedUserAccount}"/>
+                                                <span>Class</span>
+                                                <p:selectOneMenu value="#{teacherCourseRoomController.teacherSubject.classRoom}" filter="true" filterMatchMode="contains">
+                                                    <f:selectItem itemLabel="#{msg.choose}"/>
+                                                    <f:selectItems value="#{userCommons.classRoomList}"/>
+                                                </p:selectOneMenu>
 
-                                        <span>Student</span>
-                                        <p:selectOneMenu value="#{teacherCourseRoomController.teacherSubject.course}" filter="true" filterMatchMode="contains">
-                                            <f:selectItem itemLabel="#{msg.choose}"/>
-                                            <f:selectItems value="#{userCommons.courseList}"/>
-                                        </p:selectOneMenu>
-                                        
-                                    </h:panelGrid>
-                                    <hr/>
-                                    <p:commandButton action="#{teacherCourseRoomController.clearTeacherSubject()}" class="kbtn-default mx-3" value="#{msg.clear}" icon="#{msg.clear_icon}" immediate="true" update="@form"/>
-                                    <p:commandButton action="#{teacherCourseRoomController.saveTeacherSubject()}"  class="kbtn-success" value="#{teacherCourseRoomController.optionText}" update="@form,:teacherCourseTable"/>
-                                </h:form>
-                            </div>
-                            <div class="col-md-8">
-                                <h:form id="teacherCourseTable">
-                                    <p:dataTable value="#{teacherCourseRoomController.teacherSubjectList}" var="teacherCourse" paginator="true" rows="12" paginatorPosition="bottom">
-                                        <p:column headerText="Course">
-                                            <h:outputText value="#{teacherCourse.course}"/>
-                                        </p:column>
-                                        <p:column headerText="Teacher">
-                                            <h:outputText value="#{teacherCourse.userAccount}"/>
-                                        </p:column>
-                                        <p:column headerText="#{msg.action}" style="width: 120px;" exportable="false">
-                                            <p:menuButton value="#{msg.manage}">
-                                                <p:menuitem action="#{teacherCourseRoomController.editTeacherSubject(teacherSubject)}" icon="fa fa-edit" class="text-info" value="#{msg.edit}" immediate="true" update=":teacherCourseForm"/>
-                                                <p:menuitem action="#{teacherCourseRoomController.deleteTeacherSubject(teacherSubject)}" icon="fa fa-remove" class="text-danger" value="#{msg.delete}" immediate="true" update="@form"/>
-                                            </p:menuButton>
-                                        </p:column>
-                                    </p:dataTable>
-                                </h:form>
-                            </div>
+                                                <p:commandButton action="#{teacherCourseRoomController.clearTeacherSubject()}" class="kbtn-default mx-3" value="#{msg.clear}" icon="#{msg.clear_icon}" immediate="true" update="@form"/>
+                                                <p:commandButton action="#{teacherCourseRoomController.saveTeacherSubject()}"  class="kbtn-success" value="#{teacherCourseRoomController.optionText}" update="@form,:teacherCourseTable"/>
+                                            </h:panelGrid>
+                                        </h:form>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <h:form id="teacherCourseTable">
+                                            <p:dataTable value="#{teacherCourseRoomController.teacherSubjectList}" var="teacherCourse" paginator="true" rows="12" paginatorPosition="bottom">
+                                                <p:column style="width: 20px;">
+                                                    <p:rowToggler/>
+                                                </p:column>
+                                                <p:rowExpansion>
+                                                    <h:panelGrid columns="2">
+                                                        <span>#{msg.created_date}</span>
+                                                        <h:outputText value="#{teacherCourse.createdDate}">
+                                                            <f:convertDateTime type="localDate" pattern="#{msg.formatted_date}"/>
+                                                        </h:outputText>
+                                                    </h:panelGrid>
+                                                </p:rowExpansion>
+
+                                                <p:column headerText="Teacher" filterBy="#{teacherCourse.userAccount.firstName} #{teacherCourse.userAccount.middleName} #{teacherCourse.userAccount.otherName}" filterMatchMode="contains">
+                                                    <h:outputText value="
+                                                                  #{teacherCourse.userAccount.firstName} 
+                                                                  #{teacherCourse.userAccount.middleName} 
+                                                                  #{teacherCourse.userAccount.otherName}
+                                                                  "/>
+                                                </p:column>
+
+                                                <p:column headerText="#{msg.class}">
+                                                    <h:outputText value="#{teacherCourse.classRoom.className}"/>
+                                                </p:column>
+
+
+                                                <p:column headerText="#{msg.action}" style="width: 100px;" exportable="false">
+                                                    <p:menuButton value="#{msg.manage}">
+                                                        <p:menuitem action="#{teacherCourseRoomController.editTeacherSubject(teacherCourse)}" icon="fa fa-edit" class="text-info" value="#{msg.edit}" immediate="true" update=":teacherCourseForm"/>
+                                                        <p:menuitem icon="fa fa-plus" class="text-info" value="Assign Courses" action="#{teacherCourseRoomController.manageSchoolSubject(teacherCourse)}" immediate="true" update=":mainPanel"/>
+                                                        <p:menuitem action="#{teacherCourseRoomController.deleteTeacherSubject(teacherCourse)}" icon="fa fa-remove" class="text-danger" value="#{msg.delete}" immediate="true" update="@form"/>
+                                                    </p:menuButton>
+                                                </p:column>
+                                            </p:dataTable>
+                                        </h:form>
+                                    </div>
+                                </div>
+                            </h:panelGroup>
+                            <h:panelGroup rendered="#{teacherCourseRoomController.pageView.createView}">
+                                <ui:include src="includes/school-subject.xhtml"/>
+                            </h:panelGroup>
                         </div>
                     </div>
-                </div>
+
+
+                </h:panelGroup>
             </ui:define>
         </ui:composition>
     </h:body>
