--- a/smartweb/src/main/webapp/secured/pages/student-class-room.xhtml
+++ b/smartweb/src/main/webapp/secured/pages/student-class-room.xhtml
@@ -4,66 +4,72 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <h:body>
         <ui:composition template="../templatesUI.xhtml">
-            <ui:define name="pageTitle">Link student to classes</ui:define>
+            <ui:define name="pageTitle">Student and Classes</ui:define>
+            <ui:define name="subText">NOTE: <small class="text-muted">Add a teacher to a class and assign subjects</small></ui:define>
             <ui:define name="pageContent">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <h:form class="spaced-form" id="studentClassRoomForm">
-                                    <h:panelGrid columns="2">
+                <h:panelGroup id="mainPanel">
+                    <div class="card">
+                        <div class="card-body">
+                            <h:panelGroup rendered="#{studentClassRoomController.pageView.listView}">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <h:form class="spaced-form" id="teacherCourseForm">
+                                            <h:panelGrid columns="2">
+                                                <span>Class Room</span>
+                                                <p:selectOneMenu value="#{studentClassRoomController.studentClassRoom.classRoom}" filter="true" filterMatchMode="contains">
+                                                    <f:selectItem itemLabel="#{msg.choose}"/>
+                                                    <f:selectItems value="#{userCommons.classRoomList}"/>
+                                                </p:selectOneMenu>
 
-                                        <p:selectOneMenu value="#{studentClassRoomController.studentClassRoom.classRoom}" filter="true" filterMatchMode="contains">
-                                            <f:selectItem itemLabel="#{msg.choose} Class Room"/>
-                                            <f:selectItems value="#{userCommons.classRoomList}"/>
-                                            <p:ajax listener="#{studentClassRoomController.selectedClass()}" update="@form"/>
-                                        </p:selectOneMenu>
-                                        
-                                        <h:outputText class="field-shade" value="#{studentClassRoomController.selectedClassRoom.className}"/>
+                                                <p:commandButton action="#{studentClassRoomController.clearStudentClassRoom()}" class="kbtn-default mx-3" value="#{msg.clear}" icon="#{msg.clear_icon}" immediate="true" update="@form"/>
+                                                <p:commandButton action="#{studentClassRoomController.saveStudentClassRoom()}"  class="kbtn-success" value="#{studentClassRoomController.optionText}" update="@form,:studentClassRoomTable"/>
+                                            </h:panelGrid>
+                                        </h:form>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <h:form id="teacherCourseTable">
+                                            <p:dataTable value="#{studentClassRoomController.studentClassRoomList}" var="studentClassRoom" paginator="true" rows="12" paginatorPosition="bottom">
+                                                <p:column style="width: 20px;">
+                                                    <p:rowToggler/>
+                                                </p:column>
+                                                <p:rowExpansion>
+                                                    <h:panelGrid columns="2">
+                                                        <span>#{msg.created_date}</span>
+                                                        <h:outputText value="#{teacherCourse.createdDate}">
+                                                            <f:convertDateTime type="localDate" pattern="#{msg.formatted_date}"/>
+                                                        </h:outputText>
+                                                    </h:panelGrid>
+                                                </p:rowExpansion>
 
-                                        <span>Student</span>
-                                        <p:selectOneMenu value="#{studentClassRoomController.studentClassRoom.student}" filter="true" filterMatchMode="contains">
-                                            <f:selectItem itemLabel="#{msg.choose}"/>
-                                            <f:selectItems value="#{userCommons.studentList}"/>
-                                        </p:selectOneMenu>
-                                        
-                                    </h:panelGrid>
-                                    <hr/>
-                                        <p:commandButton action="#{studentClassRoomController.clearStudentClassRoom()}" class="kbtn-default mx-3" value="#{msg.clear}" icon="#{msg.clear_icon}" immediate="true" update="@form"/>
-                                        <p:commandButton action="#{studentClassRoomController.saveStudentClassRoom()}"  class="kbtn-success" value="#{studentClassRoomController.optionText}" update="@form,:studentClassRoomTable"/>
-                                </h:form>
-                            </div>
-                            <div class="col-md-8">
-                                <h:form id="studentClassRoomTable">
-                                    <p:dataTable value="#{studentClassRoomController.studentClassRoomList}" var="studentClassRoom" paginator="true" rows="12" paginatorPosition="bottom">
-                                        <p:column headerText="Student">
-                                            <h:outputText value="
-                                                          #{studentClassRoom.student.firstName} 
-                                                          #{studentClassRoom.student.middleName} 
-                                                          #{studentClassRoom.student.otherName} - 
-                                                          #{studentClassRoom.student.studentId}
-                                                          "/>
-                                        </p:column>
-                                        <p:column headerText="class Room">
-                                            <h:outputText value="#{studentClassRoom.classRoom.className}"/>
-                                        </p:column>
-                                        <p:column headerText="#{msg.action}" style="width: 120px;" exportable="false">
-                                            <p:menuButton value="#{msg.manage}">
-                                                <p:menuitem action="#{studentClassRoomController.editStudentClassRoom(studentClassRoom)}" icon="fa fa-edit" class="text-info" value="#{msg.edit}" immediate="true" update=":studentClassRoomForm"/>
-                                                <p:menuitem action="#{studentClassRoomController.deleteStudentClassRoom(studentClassRoom)}" onclick="return confirm('#{msg.delete_message}')" icon="fa fa-remove" class="text-danger" value="#{msg.delete}" immediate="true" update="@form"/>
-                                            </p:menuButton>
-                                        </p:column>
-                                    </p:dataTable>
-                                </h:form>
-                            </div>
+                                                <p:column headerText="class Room">
+                                                    <h:outputText value="#{studentClassRoom.classRoom.className}"/>
+                                                </p:column>
+
+                                                <p:column headerText="#{msg.action}" style="width: 100px;" exportable="false">
+                                                    <p:menuButton value="#{msg.manage}">
+                                                        <p:menuitem action="#{studentClassRoomController.editStudentClassRoom(studentClassRoom)}" icon="fa fa-edit" class="text-info" value="#{msg.edit}" immediate="true" update=":teacherCourseForm"/>
+                                                        <p:menuitem icon="fa fa-plus" class="text-info" value="Assign Courses" action="#{studentClassRoomController.manageStudentClass(studentClassRoom)}" immediate="true" update=":mainPanel"/>
+                                                        <p:menuitem action="#{studentClassRoomController.deleteStudentClassRoom(studentClassRoom)}" icon="fa fa-remove" class="text-danger" value="#{msg.delete}" immediate="true" update="@form"/>
+                                                    </p:menuButton>
+                                                </p:column>
+                                            </p:dataTable>
+                                        </h:form>
+                                    </div>
+                                </div>
+                            </h:panelGroup>
+                            <h:panelGroup rendered="#{studentClassRoomController.pageView.createView}">
+                                <ui:include src="includes/student-class.xhtml"/>
+                            </h:panelGroup>
                         </div>
                     </div>
-                </div>
+
+
+                </h:panelGroup>
             </ui:define>
         </ui:composition>
     </h:body>
