--- a/smartweb/src/main/webapp/secured/pages/student-class-room_1.xhtml
+++ b/smartweb/src/main/webapp/secured/pages/student-class-room_1.xhtml
@@ -9,8 +9,7 @@
 
     <h:body>
         <ui:composition template="../templatesUI.xhtml">
-            <ui:define name="pageTitle">Academic Level</ui:define>
-            <ui:define name="subText"></ui:define>
+            <ui:define name="pageTitle">Link student to classes</ui:define>
             <ui:define name="pageContent">
                 <div class="card">
                     <div class="card-body">
@@ -18,11 +17,6 @@
                             <div class="col-md-4">
                                 <h:form class="spaced-form" id="studentClassRoomForm">
                                     <h:panelGrid columns="2">
-                                        <span>Student</span>
-                                        <p:selectOneMenu value="#{studentClassRoomController.studentClassRoom.student}" filter="true" filterMatchMode="contains">
-                                            <f:selectItem itemLabel="#{msg.choose}"/>
-                                            <f:selectItems value="#{userCommons.studentList}"/>
-                                        </p:selectOneMenu>
 
                                         <span>Class Room</span>
                                         <p:selectOneMenu value="#{studentClassRoomController.studentClassRoom.classRoom}" filter="true" filterMatchMode="contains">
@@ -30,16 +24,28 @@
                                             <f:selectItems value="#{userCommons.classRoomList}"/>
                                         </p:selectOneMenu>
 
+                                        <span>Student</span>
+                                        <p:selectOneMenu value="#{studentClassRoomController.studentClassRoom.student}" filter="true" filterMatchMode="contains">
+                                            <f:selectItem itemLabel="#{msg.choose}"/>
+                                            <f:selectItems value="#{userCommons.studentList}"/>
+                                        </p:selectOneMenu>
+                                        
+                                    </h:panelGrid>
+                                    <hr/>
                                         <p:commandButton action="#{studentClassRoomController.clearStudentClassRoom()}" class="kbtn-default mx-3" value="#{msg.clear}" icon="#{msg.clear_icon}" immediate="true" update="@form"/>
                                         <p:commandButton action="#{studentClassRoomController.saveStudentClassRoom()}"  class="kbtn-success" value="#{studentClassRoomController.optionText}" update="@form,:studentClassRoomTable"/>
-                                    </h:panelGrid>
                                 </h:form>
                             </div>
                             <div class="col-md-8">
                                 <h:form id="studentClassRoomTable">
                                     <p:dataTable value="#{studentClassRoomController.studentClassRoomList}" var="studentClassRoom" paginator="true" rows="12" paginatorPosition="bottom">
                                         <p:column headerText="Student">
-                                            <h:outputText value="#{studentClassRoom.student.fullName}"/>
+                                            <h:outputText value="
+                                                          #{studentClassRoom.student.firstName} 
+                                                          #{studentClassRoom.student.middleName} 
+                                                          #{studentClassRoom.student.otherName} - 
+                                                          #{studentClassRoom.student.studentId}
+                                                          "/>
                                         </p:column>
                                         <p:column headerText="class Room">
                                             <h:outputText value="#{studentClassRoom.classRoom.className}"/>
