--- a/smartadmin/src/main/webapp/secured/menu/top-nav.xhtml
+++ b/smartadmin/src/main/webapp/secured/menu/top-nav.xhtml
@@ -9,7 +9,7 @@
             <div class="navbar-logo">
                 <a href="#{application.contextPath}/secured/index.xhtml">
                     <!--<img class="img-fluid" src="{application.contextPath}/assets/images/user.png" alt="Theme-Logo" />-->
-                    Smart School
+                    Smart School - Primary/JHS
                 </a>
                 <a class="mobile-menu" id="mobile-collapse" href="#!">
                     <i class="feather icon-menu icon-toggle-right"></i>
@@ -58,6 +58,12 @@
                                 <li>
                                     <a href="#{application.contextPath}/secured/pages/profile-update.xhtml">
                                         <i class="feather icon-user"></i> Profile
+
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#{application.contextPath}/secured/pages/school-profile.xhtml">
+                                        <i class="feather icon-user"></i>School Profile
 
                                     </a>
                                 </li>
