--- a/smartadmin/src/main/webapp/secured/pages/academic-level.xhtml
+++ b/smartadmin/src/main/webapp/secured/pages/academic-level.xhtml
@@ -9,7 +9,7 @@
     <h:body>
         <ui:composition template="../templatesUI.xhtml">
             <ui:define name="pageTitle">Academic Level</ui:define>
-            <ui:define name="subText"></ui:define>
+            <ui:define name="subText">E.g. KG,Class 1,2.., JHS1 et.c</ui:define>
             <ui:define name="pageContent">
                 <div class="row">
                     <div class="col-md-4">
