--- a/smartadmin/src/main/webapp/secured/menu/sidebar.xhtml
+++ b/smartadmin/src/main/webapp/secured/menu/sidebar.xhtml
@@ -7,7 +7,7 @@
     <nav class="pcoded-navbar">
         <div class="nav-list">
             <div class="pcoded-inner-navbar main-menu">
-                <div class="pcoded-navigation-label">Navigation</div>
+                <div class="pcoded-navigation-label">A D M I N</div>
                 <ul class="pcoded-item pcoded-left-item">
                    
                     <li class="active">
