--- a/smartadmin/src/main/webapp/secured/pages/fees-type.xhtml
+++ b/smartadmin/src/main/webapp/secured/pages/fees-type.xhtml
@@ -9,7 +9,7 @@
     <h:body>
         <ui:composition template="../templatesUI.xhtml">
             <ui:define name="pageTitle">Fees Type</ui:define>
-            <ui:define name="subText"></ui:define>
+            <ui:define name="subText">E.g. Exams, ICT, Sport fees e.t.c</ui:define>
             <ui:define name="pageContent">
                 <div class="row">
                     <div class="col-md-4">
