--- a/smartadmin/src/main/webapp/secured/pages/teacher-course.xhtml
+++ b/smartadmin/src/main/webapp/secured/pages/teacher-course.xhtml
@@ -10,7 +10,7 @@
     <h:body>
         <ui:composition template="../templatesUI.xhtml">
             <ui:define name="pageTitle">Teacher,Courses And Classes</ui:define>
-            <ui:define name="subText">NOTE: <small class="text-muted">Add a teacher to a class and assign subjects</small></ui:define>
+            <ui:define name="subText">NOTE: <small class="text-muted">Map a teacher to a class and assign teaching subjects</small></ui:define>
             <ui:define name="pageContent">
                 <h:panelGroup id="mainPanel">
                     <div class="card">
@@ -68,7 +68,7 @@
                                                 <p:column headerText="#{msg.action}" style="width: 100px;" exportable="false">
                                                     <p:menuButton value="#{msg.manage}">
                                                         <p:menuitem action="#{teacherCourseRoomController.editTeacherSubject(teacherCourse)}" icon="fa fa-edit" class="text-info" value="#{msg.edit}" immediate="true" update=":teacherCourseForm"/>
-                                                        <p:menuitem icon="fa fa-plus" class="text-info" value="Assign Courses" action="#{teacherCourseRoomController.manageSchoolSubject(teacherCourse)}" immediate="true" update=":mainPanel"/>
+                                                        <p:menuitem icon="fa fa-plus" class="text-info" value="Assign subject" action="#{teacherCourseRoomController.manageSchoolSubject(teacherCourse)}" immediate="true" update=":mainPanel"/>
                                                         <p:menuitem action="#{teacherCourseRoomController.deleteTeacherSubject(teacherCourse)}" icon="fa fa-remove" class="text-danger" value="#{msg.delete}" immediate="true" update="@form"/>
                                                     </p:menuButton>
                                                 </p:column>
