--- a/smartweb/src/main/webapp/secured/pages/student-class-room.xhtml
+++ b/smartweb/src/main/webapp/secured/pages/student-class-room.xhtml
@@ -27,12 +27,12 @@
                                                 </p:selectOneMenu>
 
                                                 <p:commandButton action="#{studentClassRoomController.clearStudentClassRoom()}" class="kbtn-default mx-3" value="#{msg.clear}" icon="#{msg.clear_icon}" immediate="true" update="@form"/>
-                                                <p:commandButton action="#{studentClassRoomController.saveStudentClassRoom()}"  class="kbtn-success" value="#{studentClassRoomController.optionText}" update="@form,:studentClassRoomTable"/>
+                                                <p:commandButton action="#{studentClassRoomController.saveStudentClassRoom()}" icon="#{msg.check_icon_circle}" class="kbtn-success" value="#{studentClassRoomController.optionText}" update="@form,:studentClassRoomTable"/>
                                             </h:panelGrid>
                                         </h:form>
                                     </div>
                                     <div class="col-md-8">
-                                        <h:form id="teacherCourseTable">
+                                        <h:form id="studentClassRoomTable">
                                             <p:dataTable value="#{studentClassRoomController.studentClassRoomList}" var="studentClassRoom" paginator="true" rows="12" paginatorPosition="bottom">
                                                 <p:column style="width: 20px;">
                                                     <p:rowToggler/>
@@ -53,7 +53,7 @@
                                                 <p:column headerText="#{msg.action}" style="width: 100px;" exportable="false">
                                                     <p:menuButton value="#{msg.manage}">
                                                         <p:menuitem action="#{studentClassRoomController.editStudentClassRoom(studentClassRoom)}" icon="fa fa-edit" class="text-info" value="#{msg.edit}" immediate="true" update=":teacherCourseForm"/>
-                                                        <p:menuitem icon="fa fa-plus" class="text-info" value="Assign Courses" action="#{studentClassRoomController.manageStudentClass(studentClassRoom)}" immediate="true" update=":mainPanel"/>
+                                                        <p:menuitem icon="fa fa-plus" class="text-info" value="Add Student" action="#{studentClassRoomController.manageStudentClass(studentClassRoom)}" immediate="true" update=":mainPanel"/>
                                                         <p:menuitem action="#{studentClassRoomController.deleteStudentClassRoom(studentClassRoom)}" icon="fa fa-remove" class="text-danger" value="#{msg.delete}" immediate="true" update="@form"/>
                                                     </p:menuButton>
                                                 </p:column>
