--- a/smartweb/src/main/webapp/secured/menu/sidebar.xhtml
+++ b/smartweb/src/main/webapp/secured/menu/sidebar.xhtml
@@ -48,12 +48,7 @@
                         </a>
                         <ul class="pcoded-submenu">
                             <li class="">
-                                <a href="#{application.contextPath}/#{msg.sidebar_url}/exams.xhtml" class="waves-effect waves-dark">
-                                    <span class="pcoded-mtext">Exams</span>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a href="#{application.contextPath}/#{msg.sidebar_url}/term-report.xhtml" class="waves-effect waves-dark">
+                                <a href="#{application.contextPath}/#{msg.sidebar_url}/terminal-report.xhtml" class="waves-effect waves-dark">
                                     <span class="pcoded-mtext">Term Report</span>
                                 </a>
                             </li>
